--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ button {
   border: none;
   background-color: transparent;
   cursor: pointer;
+  line-height: 1.5;
 }
 
 a {
@@ -51,36 +52,35 @@ address {
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .header {
   border-bottom: 1px solid var(--accent-color);
-  & > .wrapper {
+  /* & > .wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
+  } */
 }
-.header-nav {
+/* .header-nav {
   display: flex;
   gap: 76px;
-}
+} */
 .logo {
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
   font-weight: 800;
-  color: var(--dark-color);
+  color: var(--primary-color);
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   span {
-    color: var(--primary-color);
+    color: var(--dark-color);
   }
 }
 .header-nav-link {
-  position: relative;
+  /* position: relative; */
   padding: 24px 0;
   color: var(--dark-color);
   font-weight: 500;
@@ -89,7 +89,7 @@ address {
   &:focus {
     color: var(--pressed-color);
   }
-  &::after {
+  /* &::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -106,7 +106,7 @@ address {
   &:focus::after {
     transform: scaleX(1);
     transform-origin: 100% 50%;
-  }
+  } */
 }
 .header-address-link {
   transition: color var(--transition);
@@ -117,20 +117,20 @@ address {
   }
 }
 
-.header-list {
+/* .header-list {
   display: flex;
   gap: 40px;
-}
+} */
 
 .hero {
   background-color: var(--hero-bg-color);
   padding: 188px 0;
-  .wrapper {
+  /* .wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 48px;
-  }
+  } */
 }
 .hero-title {
   text-align: center;
@@ -141,7 +141,7 @@ address {
   max-width: 500px;
 }
 .hero-cta {
-  border-radius: 4px;
+  /* border-radius: 4px; */
   padding: 16px 32px;
   color: var(--white-color);
   background-color: var(--primary-color);
@@ -155,7 +155,7 @@ address {
 .advantages {
   padding: 120px 0 60px;
 }
-.hidden {
+/* .hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -164,11 +164,11 @@ address {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
-}
-.list {
+} */
+/* .list {
   display: flex;
   gap: 24px;
-}
+} */
 .services {
   padding: 60px 0 120px;
 }
@@ -199,16 +199,18 @@ address {
 }
 .card-description {
   padding: 32px 16px;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 .footer {
   padding: 100px 0;
   background-color: var(--hero-bg-color);
   .logo {
-    color: var(--white-color);
     margin-bottom: 16px;
+    span {
+      color: var(--white-color);
+    }
   }
 }
 .footer-text {
@@ -228,24 +230,24 @@ address {
     border-left: 1px solid var(--accent-color);
     border-right: 1px solid var(--accent-color);
   }
-  .card > a {
+  /* .card > a {
     transition: box-shadow var(--transition);
     &:hover,
     &:focus {
       box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
     }
-  }
+  } */
 }
 
 .filter {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   margin-bottom: 72px;
 }
 .filter-button {
   background-color: var(--light-color);
-  border-radius: 4px;
+  /* border-radius: 4px; */
   border: 1px solid var(--accent-color);
   padding: 12px 24px;
   font-weight: 500;
