--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,6 @@ button {
   border: none;
   background-color: transparent;
   cursor: pointer;
-  line-height: 1.5;
 }
 
 a {
@@ -56,16 +55,7 @@ address {
 
 .header {
   border-bottom: 1px solid var(--accent-color);
-  /* & > .wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  } */
 }
-/* .header-nav {
-  display: flex;
-  gap: 76px;
-} */
 .logo {
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
@@ -73,14 +63,12 @@ address {
   color: var(--primary-color);
   font-size: 18px;
   line-height: 1.17;
-  /* display: flex;
-  align-items: center; */
   span {
     color: var(--dark-color);
   }
 }
 .header-nav-link {
-  /* position: relative; */
+  position: relative;
   padding: 24px 0;
   color: var(--dark-color);
   font-weight: 500;
@@ -89,24 +77,6 @@ address {
   &:focus {
     color: var(--pressed-color);
   }
-  /* &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    display: block;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--primary-color);
-    transform: scaleX(0);
-    transform-origin: 0 50%;
-    transition: transform var(--transition);
-  }
-  &:hover::after,
-  &:focus::after {
-    transform: scaleX(1);
-    transform-origin: 100% 50%;
-  } */
 }
 .header-address-link {
   transition: color var(--transition);
@@ -117,20 +87,9 @@ address {
   }
 }
 
-/* .header-list {
-  display: flex;
-  gap: 40px;
-} */
-
 .hero {
   background-color: var(--hero-bg-color);
   padding: 188px 0;
-  /* .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 48px;
-  } */
 }
 .hero-title {
   text-align: center;
@@ -141,7 +100,7 @@ address {
   max-width: 500px;
 }
 .hero-cta {
-  /* border-radius: 4px; */
+  border-radius: 4px;
   padding: 16px 32px;
   color: var(--white-color);
   background-color: var(--primary-color);
@@ -155,20 +114,6 @@ address {
 .advantages {
   padding: 120px 0 60px;
 }
-/* .hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
-} */
-/* .list {
-  display: flex;
-  gap: 24px;
-} */
 .services {
   padding: 60px 0 120px;
 }
@@ -186,9 +131,6 @@ address {
     background-color: var(--white-color);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    filter: drop-shadow(0px 1px 6px rgba(46, 47, 66, 0.08))
-      drop-shadow(0px 1px 1px rgba(46, 47, 66, 0.16))
-      drop-shadow(0px 2px 1px rgba(46, 47, 66, 0.08));
   }
 }
 .card-title {
@@ -199,9 +141,6 @@ address {
 }
 .card-description {
   padding: 32px 16px;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
 }
 .footer {
   padding: 100px 0;
@@ -221,47 +160,29 @@ address {
 }
 .portfolio {
   padding: 96px 0 120px;
-  .list {
-    flex-wrap: wrap;
-  }
   .card-description {
-    align-items: flex-start;
     border-bottom: 1px solid var(--accent-color);
     border-left: 1px solid var(--accent-color);
     border-right: 1px solid var(--accent-color);
   }
-  /* .card > a {
-    transition: box-shadow var(--transition);
-    &:hover,
-    &:focus {
-      box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-    }
-  } */
 }
 
 .filter {
-  /* display: flex;
-  justify-content: center; */
   margin-bottom: 72px;
 }
 .filter-button {
   background-color: var(--light-color);
-  /* border-radius: 4px; */
+  border-radius: 4px;
   border: 1px solid var(--accent-color);
   padding: 12px 24px;
   font-weight: 500;
   color: var(--primary-color);
-  transition: background-color var(--transition), color var(--transition),
-    border-color var(--transition), filter var(--transition);
   &:hover,
   &:focus,
   &:active {
     background-color: var(--pressed-color);
     color: var(--white-color);
     border-color: var(--pressed-color);
-    filter: drop-shadow(0px 3px 1px rgba(0, 0, 0, 0.1)) drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.08))
-      drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.12));
   }
 }
 .wrapper {
