--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ h3 {
 }
 
 img {
-  display: block;
+  /* display: block; */
 }
 
 ul {
@@ -44,28 +44,28 @@ button {
 a {
   text-decoration: none;
   color: inherit;
-  display: inline-block;
+  /* display: inline-block; */
 }
 address {
   font-style: normal;
 }
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
 }
 
 .header {
   border-bottom: 1px solid var(--accent-color);
-  & > .wrapper {
+  /* & > .wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
+  } */
 }
-.header-nav {
+/* .header-nav {
   display: flex;
   gap: 76px;
-}
+} */
 .logo {
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
@@ -73,15 +73,15 @@ address {
   color: var(--primary-color);
   font-size: 18px;
   line-height: 1.17;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   span {
     color: var(--dark-color);
   }
 }
 .header-nav-link {
-  position: relative;
-  padding: 24px 0;
+  /* position: relative; */
+  /* padding: 24px 0; */
   color: var(--dark-color);
   font-weight: 500;
   transition: color var(--transition);
@@ -89,7 +89,7 @@ address {
   &:focus {
     color: var(--pressed-color);
   }
-  &::after {
+  /* &::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -106,31 +106,31 @@ address {
   &:focus::after {
     transform: scaleX(1);
     transform-origin: 100% 50%;
-  }
+  } */
 }
 .header-address-link {
   transition: color var(--transition);
-  padding: 24px 0;
+  /* padding: 24px 0; */
   &:hover,
   &:focus {
     color: var(--pressed-color);
   }
 }
 
-.header-list {
+/* .header-list {
   display: flex;
   gap: 40px;
-}
+} */
 
 .hero {
   background-color: var(--hero-bg-color);
-  padding: 188px 0;
+  /* padding: 188px 0;
   .wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 48px;
-  }
+  } */
 }
 .hero-title {
   text-align: center;
@@ -141,8 +141,8 @@ address {
   max-width: 500px;
 }
 .hero-cta {
-  border-radius: 4px;
-  padding: 16px 32px;
+  /* border-radius: 4px; */
+  /* padding: 16px 32px; */
   color: var(--white-color);
   background-color: var(--primary-color);
   font-weight: 500;
@@ -152,10 +152,10 @@ address {
     background-color: var(--pressed-color);
   }
 }
-.advantages {
+/* .advantages {
   padding: 120px 0 60px;
-}
-.hidden {
+} */
+/* .hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -164,13 +164,13 @@ address {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
-}
-.list {
+} */
+/* .list {
   display: flex;
   gap: 24px;
-}
+} */
 .services {
-  padding: 60px 0 120px;
+  /* padding: 60px 0 120px; */
 }
 .section-title {
   font-size: 36px;
@@ -184,11 +184,11 @@ address {
   background-color: var(--light-color);
   .card {
     background-color: var(--white-color);
-    border-bottom-left-radius: 4px;
+    /* border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     filter: drop-shadow(0px 1px 6px rgba(46, 47, 66, 0.08))
       drop-shadow(0px 1px 1px rgba(46, 47, 66, 0.16))
-      drop-shadow(0px 2px 1px rgba(46, 47, 66, 0.08));
+      drop-shadow(0px 2px 1px rgba(46, 47, 66, 0.08)); */
   }
 }
 .card-title {
@@ -198,13 +198,13 @@ address {
   line-height: 1.2;
 }
 .card-description {
-  padding: 32px 16px;
+  /* padding: 32px 16px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 .footer {
-  padding: 100px 0;
+  /* padding: 100px 0; */
   background-color: var(--hero-bg-color);
   .logo {
     margin-bottom: 16px;
@@ -217,55 +217,55 @@ address {
   color: var(--white-color);
 }
 .footer-description {
-  max-width: 264px;
+  /* max-width: 264px; */
 }
 .portfolio {
-  padding: 96px 0 120px;
+  /* padding: 96px 0 120px;
   .list {
     flex-wrap: wrap;
-  }
-  .card-description {
+  } */
+  /* .card-description {
     align-items: flex-start;
     border-bottom: 1px solid var(--accent-color);
     border-left: 1px solid var(--accent-color);
     border-right: 1px solid var(--accent-color);
-  }
-  .card > a {
+  } */
+  /* .card > a {
     transition: box-shadow var(--transition);
     &:hover,
     &:focus {
       box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
     }
-  }
+  } */
 }
 
 .filter {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   margin-bottom: 72px;
 }
 .filter-button {
   background-color: var(--light-color);
-  border-radius: 4px;
-  border: 1px solid var(--accent-color);
-  padding: 12px 24px;
+  /* border-radius: 4px;
+  border: 1px solid var(--accent-color); */
+  /* padding: 12px 24px; */
   font-weight: 500;
   color: var(--primary-color);
-  transition: background-color var(--transition), color var(--transition),
-    border-color var(--transition), filter var(--transition);
+  /* transition: background-color var(--transition), color var(--transition),
+    border-color var(--transition), filter var(--transition); */
   &:hover,
   &:focus,
   &:active {
     background-color: var(--pressed-color);
     color: var(--white-color);
-    border-color: var(--pressed-color);
-    filter: drop-shadow(0px 3px 1px rgba(0, 0, 0, 0.1)) drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.08))
-      drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.12));
+    /* border-color: var(--pressed-color); */
+    /* filter: drop-shadow(0px 3px 1px rgba(0, 0, 0, 0.1)) drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.08))
+      drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.12)); */
   }
 }
 .wrapper {
   margin: 0 auto;
-  max-width: 1440px;
-  padding: 0 156px;
+  /* max-width: 1440px; */
+  /* padding: 0 156px; */
 }
