--- a/css/styles.css
+++ b/css/styles.css
@@ -50,10 +50,11 @@ address {
 .logo {
   text-transform: uppercase;
   font-family: 'Raleway', sans-serif;
-  font-weight: 800;
+  font-weight: 700;
   color: var(--primary-color);
   font-size: 18px;
   line-height: 1.17;
+  letter-spacing: 0.03em;
   span {
     color: var(--dark-color);
   }
