--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ address {
 .header-nav-link {
   color: var(--dark-color);
   font-weight: 500;
+  letter-spacing: 0.02em;
   &:hover,
   &:focus {
     color: var(--pressed-color);
