--- a/css/styles.css
+++ b/css/styles.css
@@ -59,14 +59,16 @@ address {
 .logo-accent {
   color: var(--dark-color);
 }
+
 .header-nav-link {
   color: var(--dark-color);
   font-weight: 500;
   letter-spacing: 0.02em;
-  &:hover,
-  &:focus {
-    color: var(--pressed-color);
-  }
+}
+
+.header-nav-link:hover,
+.header-nav-link:focus {
+  color: var(--pressed-color);
 }
 .header-address-link {
   &:hover,
