--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
   color: var(--text-color);
   background-color: var(--white-color);
 }
@@ -63,18 +64,16 @@ address {
 .header-nav-link {
   color: var(--dark-color);
   font-weight: 500;
-  letter-spacing: 0.02em;
 }
 
 .header-nav-link:hover,
 .header-nav-link:focus {
   color: var(--pressed-color);
 }
-.header-address-link {
-  &:hover,
-  &:focus {
-    color: var(--pressed-color);
-  }
+
+.header-address-link:hover,
+.header-address-link:focus {
+  color: var(--pressed-color);
 }
 
 .hero {
@@ -91,11 +90,12 @@ address {
 .hero-cta {
   color: var(--white-color);
   background-color: var(--primary-color);
+  letter-spacing: 0.04em;
   font-weight: 500;
-  &:hover,
-  &:focus {
-    background-color: var(--pressed-color);
-  }
+}
+.hero-cta:hover,
+.hero-cta:focus {
+  background-color: var(--pressed-color);
 }
 
 .section-title {
@@ -104,12 +104,17 @@ address {
   font-weight: 700;
   text-align: center;
   margin-bottom: 72px;
+  text-transform: capitalize;
 }
 .team {
   background-color: var(--light-color);
   .card {
     background-color: var(--white-color);
   }
+}
+
+.card {
+  background-color: var(--white-color);
 }
 .card-title {
   margin-bottom: 8px;
