--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ address {
   color: var(--white-color);
   font-weight: 700;
   max-width: 500px;
+  letter-spacing: 0.02em;
 }
 .hero-cta {
   color: var(--white-color);
@@ -105,6 +106,7 @@ address {
   text-align: center;
   margin-bottom: 72px;
   text-transform: capitalize;
+  letter-spacing: 0.02em;
 }
 .team {
   background-color: var(--light-color);
@@ -134,22 +136,4 @@ address {
 }
 .footer-text {
   color: var(--white-color);
-}
-
-.filter {
-  margin-bottom: 72px;
-}
-.filter-button {
-  background-color: var(--light-color);
-  font-weight: 500;
-  color: var(--primary-color);
-  &:hover,
-  &:focus,
-  &:active {
-    background-color: var(--pressed-color);
-    color: var(--white-color);
-  }
-}
-.wrapper {
-  margin: 0 auto;
 }
